--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase": "^9.1.2"
   }
 }
